samples/_failures_safe/1761667717_9fdead_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a392903e.c: In function ‘main’:
./samples/SAFE/__tmp_a392903e.c:158:28: error: missing terminating " character
  158 |                     printf("Invalid
      |                            ^~~~~~~~
./samples/SAFE/__tmp_a392903e.c:158:21: error: expected expression at end of input
  158 |                     printf("Invalid
      |                     ^~~~~~
./samples/SAFE/__tmp_a392903e.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a392903e.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a392903e.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a392903e.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a392903e.c:158:21: error: expected declaration or statement at end of input
